Fix tables not being visible Remove boolean literals from keyword list Fix some links that were left unclosed

--- a/Styles/PageLayout/Body.css
+++ b/Styles/PageLayout/Body.css
@@ -93,7 +93,7 @@ body > right- > #main-right-tab-container {
 body > right- > #main-right-tab-container > #main-right-doc,
 body > right- > #main-right-tab-container > #main-right-examples,
 body > right- > #main-right-tab-container > #main-right-internal {
-    display: inline-flex;
+    display: inline-block;
     position: relative;
 
     min-width:  100%;
